--- a/rtl/win32/Makefile.fpc
+++ b/rtl/win32/Makefile.fpc
@@ -14,8 +14,10 @@ units=$(SYSTEMUNIT) systhrds objpas strings \
       sysutils classes typinfo math varutils variants \
       cpu mmx charset ucomplex getopts \
       wincrt winmouse winevent sockets printer dynlibs \
-      video mouse keyboard types comobj dateutils rtlconst sysconst
-rsts=math varutils typinfo variants classes dateutils sysconst
+      video mouse keyboard types comobj dateutils rtlconst sysconst\
+      runerrors
+
+rsts=math varutils typinfo variants classes dateutils sysconst runerrors
 
 [require]
 nortl=y
@@ -229,3 +231,5 @@ ucomplex$(PPUEXT) : $(INC)/ucomplex.pp math$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT)
 #
 
 callspec$(PPUEXT) : $(INC)/callspec.pp $(SYSTEMUNIT)$(PPUEXT)
+
+runerrors$(PPUEXT) : $(INC)/runerrors.pp $(SYSTEMUNIT)$(PPUEXT)
