* redhat dir fix

--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -598,17 +598,17 @@ RPMBUILD=$(strip $(wildcard $(addsuffix /rpm,$(SEARCHPATH))))
 endif
 REDHATDIR=/usr/src/redhat
 # Debian has /usr/src/rpm
-ifeq ($(wildcard REDHATDIR),)
+ifeq ($(wildcard $(REDHATDIR)),)
 REDHATDIR=/usr/src/rpm
 endif
 RPMSOURCESDIR:=$(REDHATDIR)/SOURCES
 RPMSPECDIR:=$(REDHATDIR)/SPECS
 RPMSRCDIR:=$(RPMSOURCESDIR)/fpc
 rpmcopy: distclean
-        install -d $(REDHATDIR)
-        install -d $(RPMSPECDIR)
-        install -d $(RPMSOURCESDIR)
-# fpc.rpm
+        # false || is needed to workaround fpcmake sections
+        false || [ -d $(REDHATDIR) ] || install -d $(REDHATDIR)
+        false || [ -d $(RRPMSPECDIR) ] || install -d $(RPMSPECDIR)
+        false || [ -d $(RPMSOURCESDIR) ] || install -d $(RPMSOURCESDIR)
         rm -rf $(RPMSRCDIR)
         cp $(CVSINSTALL)/fpc.spec $(RPMSPECDIR)/fpc-$(RPMFPCVERSION).spec
 ifndef NODOCS
@@ -632,6 +632,7 @@ ifndef NODOCS
 endif
         find $(RPMSRCDIR) -name 'CVS*' | xargs -n1 rm -rf
         cd $(RPMSRCDIR) ; tar cvz * > $(RPMSOURCESDIR)/fpc-$(RPMFPCVERSION)-src.tar.gz
+        rm -rf $(RPMSRCDIR)
 
 rpm: checkfpcdir rpmcopy
         cd $(RPMSPECDIR) ; $(RPMBUILD) --nodeps -ba fpc-$(RPMFPCVERSION).spec
