--- a/rtl/freebsd/Makefile.fpc
+++ b/rtl/freebsd/Makefile.fpc
@@ -10,7 +10,7 @@ fpcpackage=y
 
 [target]
 loaders=prt0 cprt0 gprt0
-units=$(SYSTEMUNIT) objpas strings syscall baseunix unixutil \
+units=$(SYSTEMUNIT) objpas strings syscall sysctl baseunix unixutil \
       unix initc   \
       dos dl termio objects printer \
       sysutils typinfo systhrds classes math varutils \
