+ tests in test/units/strings are now executed as well

--- a/tests/Makefile.fpc
+++ b/tests/Makefile.fpc
@@ -15,7 +15,7 @@ packages_linux=mysql
 
 [rules]
 # Subdirs available in the test subdir
-TESTSUBDIRS=cg cg/cdecl units/system units/dos units/crt units/objects
+TESTSUBDIRS=cg cg/cdecl units/system units/dos units/crt units/objects units/strings
 
 # All full dirnames in the test/ dir including the subdir self
 TESTDIRS:=test $(addprefix test/,$(TESTSUBDIRS))
