--- a/fcl/net/Makefile.fpc
+++ b/fcl/net/Makefile.fpc
@@ -9,18 +9,22 @@ main=fcl
 units=servlets
 units_linux=fpsock http httpsvlt xmlrpc
 units_freebsd=fpsock http httpsvlt xmlrpc
+units_darwin=fpsock http httpsvlt xmlrpc
 units_netbsd=fpsock http httpsvlt xmlrpc
 units_openbsd=fpsock http httpsvlt xmlrpc
 programs_linux=mkxmlrpc
 programs_freebsd=mkxmlrpc
+programs_darwin=mkxmlrpc
 programs_netbsd=mkxmlrpc
 programs_openbsd=mkxmlrpc
 rsts_linux=fpsock httpsvlt mkxmlrpc
 rsts_freebsd=fpsock httpsvlt mkxmlrpc
+rsts_darwin=fpsock httpsvlt mkxmlrpc
 rsts_netbsd=fpsock httpsvlt mkxmlrpc
 rsts_openbsd=fpsock httpsvlt mkxmlrpc
 exampledirs_linux=tests
 exampledirs_freebsd=tests
+exampledirs_darwin=tests
 exampledirs_netbsd=tests
 exampledirs_openbsd=tests
 
