--- a/packages/base/Makefile.fpc
+++ b/packages/base/Makefile.fpc
@@ -14,6 +14,8 @@ dirs_openbsd=inet gdbint libasync \
             mysql ibase postgres oracle odbc 
 dirs_freebsd=inet gdbint libasync \
              mysql ibase postgres oracle odbc sqlite pthreads
+dirs_darwin=inet libasync \
+             mysql ibase postgres oracle odbc sqlite pthreads
 
 [install]
 fpcpackage=y
