--- a/rtl/Makefile.fpc
+++ b/rtl/Makefile.fpc
@@ -4,7 +4,7 @@
 
 [package]
 name=rtl
-version=1.9.0
+version=1.9.2
 
 [target]
 dirs_linux=linux
@@ -17,6 +17,8 @@ dirs_freebsd=freebsd
 dirs_darwin=darwin
 dirs_beos=beos
 dirs_amiga=amiga
+dirs_netbsd=netbsd
+dirs_darwin=darwin
 
 [install]
 fpcpackage=y
